--- a/Initial/24-06-2023.html
+++ b/Initial/24-06-2023.html
@@ -14,12 +14,11 @@
 			color: darkorange;
 			background-color:red ;
 		}
-		.tbl1{
+		.tbl1,.tbl1 td,.tbl1 th{
+			
 			border: 2px solid;
 		}
-		.tbl1 td{
-			border: 2px solid;
-		}
+		
 
 
 
