--- a/Initial/25-06-2023.html
+++ b/Initial/25-06-2023.html
@@ -5,12 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BURGER</title>
 
-  <style type="text/css">
-
-    
-
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
