--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -26,10 +26,10 @@
 		<div class="row bg-warning">
 
 			<div class="col-5 ">
-				<div class="display-1">BURGER</div>
+				<div class="display-1">BURGERBURGER</div>
 			</div>
 			<div class="col-7 text-end">
-				<img src="images/header.png">
+				<img src="images/header.png" class="img-fluid">
 			</div>
 			
 			
