--- a/javascript/06-08-2023.html
+++ b/javascript/06-08-2023.html
@@ -10,11 +10,30 @@
 
   </head>
   <body>
-    
-
-    <h1>Hello, world!</h1>
 
 
+    <img id="img" src="images/header1.png" class="img-fluid">
+
+
+
+
+    <script type="text/javascript">
+
+      setInterval(chnageImage,5000);
+
+      var x=2;
+
+      function chnageImage(){
+
+        document.getElementById('img').src = 'images/header'+x+'.png';
+        x++;
+        if(x>3){
+          x=1;
+        }
+      }
+      
+
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
