--- a/php/form.html
+++ b/php/form.html
@@ -21,7 +21,7 @@
                 <h5 class="text-center mb-4"></h5>
                 <form class="form-card">
                     <div class="row justify-content-between text-left">
-                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">First name<span class="text-danger"> *</span></label> <input type="text" id="fname" name="name" placeholder="Enter your first name" > 
+                        <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">First name<span class="text-danger"> *</span></label> <input type="text" required id="fname" name="name" placeholder="Enter your first name" > 
                         </div>
                         <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Father Name<span class="text-danger"> *</span></label> <input type="text" id="lname" name="fatherName" placeholder="Enter your name" > </div>
                     </div>
