--- a/jquery/jqyery.html
+++ b/jquery/jqyery.html
@@ -11,6 +11,8 @@
 <div id="txt" class="jtext">Hello Corvit</div>
 <button id="btn">Change Text</button>
 
+<div id="box" style="width:200px;height: 200px;background-color:magenta ;"></div>
+
 
 <script type="text/javascript" src="jquery/jquery-3.7.1.js"></script>
 
@@ -22,9 +24,36 @@
 
 	$('#btn').click(function (){
 
-		$('#txt').text('AKHUWAT');
+		$('#txt').fadeOut(function(){
+			$('#txt').text('AKHUWAT');
+			$('#txt').fadeIn(2000);
+		});
+
 
 	});
+
+
+	$('#box').mouseenter(function(){
+
+		$('#box').animate({
+			height:'400px',
+			width: '350px',
+
+		});
+
+	});
+
+	$('#box').mouseleave(function(){
+
+		$('#box').animate({
+			height:'200px',
+			width: '200px',
+
+		});
+
+	});
+
+
 
 </script>
 
