--- a/jquery/animatedButton.html
+++ b/jquery/animatedButton.html
@@ -10,6 +10,9 @@
 <button id="btn" style="width:100px;height: 55px;position:absolute;">Click If You Can</button>
 
 
+
+<button onclick="value1();">Value</button>
+
 <script type="text/javascript" src="jquery/jquery-3.7.1.js"></script>
 
 <script type="text/javascript">
@@ -24,6 +27,22 @@
 			bottom: y+'%',
 		});
 	});
+
+
+	function value1(){
+
+		let x=10;
+
+		if(x==10){
+			let x = 20;
+			console.log(x);
+		}
+
+		console.log(x);
+
+	}
+
+
 
 </script>
 
