--- a/jquery/typewriter.html
+++ b/jquery/typewriter.html
@@ -4,8 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Type Writer</title>
+	<style type="text/css">
+
+		.inp::placeholder{
+			color: red;
+		}
+	</style>
 </head>
 <body>
+
+	<input class="inp" type="text" placeholder="hello">
+
+	<p style="font-size: 5vw;">Hello 16 px 2*16 = 2em  , 1.2*16=1.2</p>
 
 <h1>
   <span class="typer" id="main" data-words="Ghulam Mustafa is great, Ghulam Mustafa is fun,lightweight,easy" data-delay="100" data-deleteDelay="1000"></span>
